--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"node-calls-python": "^1.8.2"
+		"node-calls-python": "^1.8.2",
+		"svelte-cookie": "^1.0.1"
 	}
 }
