--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"js-cookie": "^3.0.5",
 		"node-calls-python": "^1.8.2",
 		"svelte-cookie": "^1.0.1"
 	}
